@@ -135,10 +135,14 @@ class NamingOptionsPage(OptionsPage):
         file.metadata['album'] = 'Help!'
         file.metadata['title'] = 'Ticket to Ride'
         file.metadata['artist'] = 'The Beatles'
+        file.metadata['artistsort'] = 'Beatles, The'
         file.metadata['albumartist'] = 'The Beatles'
+        file.metadata['albumartistsort'] = 'Beatles, The'
         file.metadata['tracknumber'] = '7'
         file.metadata['totaltracks'] = '14'
         file.metadata['date'] = '1965-08-06'
+        file.metadata['releasetype'] = 'Album'
+        file.metadata['releasestatus'] = 'Official'
         file.metadata['~extension'] = 'mp3'
         filename = file.make_filename(settings=settings)
         self.ui.example_filename.setText(filename)
@@ -147,10 +151,14 @@ class NamingOptionsPage(OptionsPage):
         file.metadata['album'] = 'Explosive Doowops, Volume 4'
         file.metadata['title'] = 'Why? Oh Why?'
         file.metadata['artist'] = 'The Fantasys'
+        file.metadata['artistsort'] = 'Fantasys, The'
         file.metadata['albumartist'] = 'Various Artists'
+        file.metadata['albumartistsort'] = 'Various Artists'
         file.metadata['tracknumber'] = '5'
         file.metadata['totaltracks'] = '26'
         file.metadata['date'] = '1999-02-03'
+        file.metadata['releasetype'] = 'Compilation'
+        file.metadata['releasestatus'] = 'Official'
         file.metadata['compilation'] = '1'
         file.metadata['~extension'] = 'mp3'
         filename = file.make_filename(settings=settings)
